Fixed credits on small screens

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -151,6 +151,8 @@ footer ul li a:hover {
   display: flex;
   justify-content: center;
   font-size: 1.1rem;
+  background-color: $primary-color;
+  padding-bottom: 1rem;
 }
 
 .credits a {
